0.0.8
 - enh: minor improvements for HDF5ImageCache and ImageCorrCache
 - enh: use data size as cache size if smaller than requested chunk size
 - enh: return dictionary for brightness feature computation
 - enh: allow to pass a single image for brightness feature computation
 - enh: allow to pass a single image for texture feature computation
 - enh: make sure that masks are written as uint8 to HDF5 files
 - ref: haralick texture computation now returns dict instead of recarray
0.0.7
 - enh: dataset keyword arguments and mode HDF5WriterThread
 - enh: speed-up of brightness feature computation
0.0.6
 - feat: add HDF5Writer and HDF5WriterThread classes in write submodule
 - feat: segmenters compute labeled images instead of masks
 - enh: introduce iter_chunks for cached image data
 - ref: do not filter for contour length
 - ref: rename feat.background.get_available_background_methods
 - ref: store PPID information in dataset metadata instead of "user" section
0.0.5
 - enh: allow to set image_cache_size in HDF5Data
 - enh: allow to easily register new custom segmenters
 - ref: CPUSegmenter has its own submodule now
0.0.4
 - feat: introduce HDF5 virtual dataset path concatenator
 - enh: allow to pass h5py.File object to HDF5Data
 - fix: typo in logging statement for sparse median bg computation
0.0.3
 - feat: introduce median background computation
 - feat: introduce data reader
 - feat: introduce thresholding segmenter
 - feat: introduce brightness, haralick texture, and moments-based features
0.0.2
 - first automated release
0.0.1
 - stub release