@@ -1,3 +1,4 @@
 # flake8: noqa: F401
+from .deque_writer_thread import DequeWriterThread
+from .queue_collector_thread import QueueCollectorThread
 from .writer import HDF5Writer
-from .writer_thread import HDF5WriterThread
